[package]
name = "cml"
version = "0.1.1"
authors = ["Chris Moore <35407569+csm123199@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
futures = "0.3.12"

