[package]
name = "cml"
version = "0.1.1"
authors = ["Chris Moore <35407569+csm123199@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"
thiserror = "1.0.23"
futures = "0.3.12"
serde_with = "1.6.4"
strum = "0.20.0"
schemars = { version = "0.8.0", optional = true }

[features]
default = []

# Exposes module rest::raw, which contains methods to create authenticated requests to a CML REST API instance
untyped_requests = []

