[package]
name = "cmlrest"
version = "0.1.0"
authors = ["Chris Moore <35407569+csm123199@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

default-run = "cmlrest"

[dependencies]
clap = "3.0.0-beta.2"
termimad = "0.9.2"
tokio = { version = "1.1.0", features = ["full"] }
serde_json = "1.0.61"
cml = { path = "../cml" }
