[package]
name = "cmlterm"
version = "0.1.0"
authors = ["Chris Moore <35407569+csm123199@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.1.0", features = ["full"] }
futures = "0.3.12"

# websocket stuff
futures-util = "0.3.12"
futures-channel = "0.3.12"
tokio-tungstenite = "0.13.0"
tokio-native-tls = "0.3.0"
ascii = "1.0.0"

# terminal
termion = "1.5.6"
termion-input-tokio = "0.3.0"
smol_str = "0.1.17"
crossterm = "0.19.0"

# debug displays
hex = "0.4.2"

cml = { path = "../cml" }

