[package]
name = "cmlterm"
version = "0.6.2"
authors = ["Chris Moore <35407569+csm123199@users.noreply.github.com>"]
edition = "2018"
homepage = "https://github.com/csm123199/cml-rs"
repository = "https://github.com/csm123199/cml-rs/tree/main/cmlterm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1.0.23"
anyhow = "1.0.39"
log = "0.4.14"
env_logger = "0.8.2"

futures = "0.3.14"
tokio = { version = "1.4.0", features = ["full"] }
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"

# backend
tokio-stream = { version = "0.1.3", features = [ "net" ] }

# ssh backend
async-io = "1.4.0"
futures-io = "0.3.14"
async-ssh2-lite = "0.2.1"

# websocket backend
tokio-tungstenite = "0.13.0"
tokio-native-tls = "0.3.0"
ascii = "1.0.0"

# tty terminal
crossterm = { version = "0.19.0", features = [ "event-stream" ] }
smol_str = "0.1.17"
colored = "2.0.0"

# debug displays
hex = "0.4.2"

cml = { path = "../cml" }

# commandline completion
smallvec = "1.6.1"

